<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundLayout"
    tools:context="ba.unsa.etf.rma.fadil_kalaca17479.spirala3.ListeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/backgroundLayout"
        android:paddingHorizontal="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dKategorije"
            android:text="@string/Kategorije"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:id="@+id/dAutori"
            android:text="@string/Autori"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:padding="20dp"
        android:background="@color/backgroundLayout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tekstPretraga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/backgroundText"
            android:hint="@string/upispretragehint"/>
        <Button
            android:id="@+id/dPretraga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:text="@string/tekstPretragabuttona"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/backgroundLayout"
        android:paddingHorizontal="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dDodajKategoriju"
            android:text="@string/stringdodajkategoriju"
            android:enabled="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dDodajKnjigu"
            android:text="@string/stringdodajknjigu"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonizgledfile"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dDodajOnline"
            android:text="@string/dDodajOnline"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundListView"
        android:id="@+id/listaKategorija"></ListView>

</LinearLayout>
